# papi-toolkit

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  taint.supp
include/: ProvenanceTracker.h  TaintAnalyzer.h  TaintFixEmitter.h  TaintSummaryFile.h  ValidationPatterns.h
src/: ProvenanceTracker.cpp  TaintAnalyzer.cpp  TaintAnalyzer_validation.cpp  TaintFixEmitter.cpp  TaintFixEmitter_output.cpp  TaintSummaryFile.cpp  ValidationPatterns.cpp  main.cpp  papi-annotate.cpp
testfiles/: file_a.c  file_b.c  test1.c  test_flow.c  test_provenance.c  test_validation_patterns.c
tools/: buildclang.sh
